# TelegramClone

./: .env.example  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: auth.py  chats.py  deps.py  router.py  system.py
app/cli/: manage.py
app/core/: feature_manager.py  settings.py
app/db/: session.py
app/models/: entities.py
app/schemas/: auth.py  chat.py
app/services/: auth.py  chat.py  environment.py  security.py
app/static/css/: telegram.css
app/templates/: index.html  views.py
app/ws/: stream.py
docs/: architecture.md
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_feature_and_environment.py
